<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditFontFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tipus_font_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/tipus_font"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/img_accesibilitat"
                app:layout_constraintTop_toBottomOf="@+id/editLon" />

            <ImageView
                android:id="@+id/img_latLon"
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintEnd_toStartOf="@+id/txt_titol_accesibilitat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/estat_spinner" />

            <EditText
                android:id="@+id/txt_informacio"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_titol_informacio" />

            <ImageView
                android:id="@+id/img_accesibilitat"
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editLon" />

            <ImageView
                android:id="@+id/img_info"
                android:layout_width="50dp"
                android:layout_height="51dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:src="@drawable/ic_baseline_info_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnTypeSel1" />

            <EditText
                android:id="@+id/txt_nom_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/nom_font"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/img_font"
                android:layout_width="76dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_nom_font"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txt_titol_accesibilitat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/coordenades_font"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/estat_spinner" />

            <TextView
                android:id="@+id/txt_titol_informacio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/informacio"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/img_info"
                app:layout_constraintTop_toBottomOf="@+id/btnTypeSel1" />

            <EditText
                android:id="@+id/editLon"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/lon"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/editAdreca"
                app:layout_constraintStart_toEndOf="@+id/editLat"
                app:layout_constraintTop_toBottomOf="@+id/txt_titleLon" />

            <EditText
                android:id="@+id/editLat"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/lat"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_titleLon"/>

            <EditText
                android:id="@+id/editAdreca"
                android:layout_width="110dp"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/adreca"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_titleLon" />

            <TextView
                android:id="@+id/txt_titleLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/latitud"
                android:textColor="@color/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_titol_accesibilitat" />

            <TextView
                android:id="@+id/txt_titleLon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/longitud"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toStartOf="@+id/txt_titleAdreca"
                app:layout_constraintStart_toEndOf="@+id/txt_titleLat"
                app:layout_constraintTop_toBottomOf="@+id/txt_titol_accesibilitat" />

            <TextView
                android:id="@+id/txt_titleAdreca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="65dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/adreca"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_titol_accesibilitat" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="160dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_send"
                android:text="@string/guardar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_informacio"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/btnBack"
                style="@style/btnBackStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_upload"
                android:layout_width="70dp"
                android:layout_height="63dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_upload"
                app:layout_constraintBottom_toBottomOf="@+id/img_font"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_font"
                app:layout_constraintTop_toTopOf="@+id/img_font" />

            <ImageView
                android:id="@+id/btn_removeImg"
                android:layout_width="71dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_delete"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/img_font"
                app:layout_constraintEnd_toStartOf="@+id/img_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_font" />

            <TextView
                android:id="@+id/input_id_font"
                android:layout_width="80dp"
                android:layout_height="34dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnTypeSel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/gota_1_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tipus_font_title" />

            <ImageView
                android:id="@+id/btnTypeSel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/gota_2_small"
                app:layout_constraintStart_toEndOf="@+id/btnTypeSel1"
                app:layout_constraintTop_toBottomOf="@+id/tipus_font_title" />

            <ImageView
                android:id="@+id/btnTypeSel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/gota_3_small"
                app:layout_constraintStart_toEndOf="@+id/btnTypeSel2"
                app:layout_constraintTop_toBottomOf="@+id/tipus_font_title" />

            <ImageView
                android:id="@+id/btnTypeSel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/gota_4_small"
                app:layout_constraintStart_toEndOf="@+id/btnTypeSel3"
                app:layout_constraintTop_toBottomOf="@+id/tipus_font_title" />

            <ImageView
                android:id="@+id/btnTypeSel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/gota_5_small"
                app:layout_constraintStart_toEndOf="@+id/btnTypeSel4"
                app:layout_constraintTop_toBottomOf="@+id/tipus_font_title" />

            <Spinner
                android:id="@+id/estat_spinner"
                android:layout_width="184dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:entries="@array/spinner_estats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_font" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
