<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment">

    <Button
        android:id="@+id/btn_boca"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_home"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        android:text="@string/fonts_boca"
        android:textColor="#000"
        android:drawablePadding="0dp"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="146dp" />

    <Button
        android:id="@+id/btn_boca_singular"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_home"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        android:text="@string/fonts_boca"
        android:textColor="#000"
        android:drawablePadding="0dp"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="206dp" />

    <Button
        android:id="@+id/btn_ornamental"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_home"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        android:text="@string/fonts_boca"
        android:textColor="#000"
        android:drawablePadding="0dp"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="266dp" />

    <Button
        android:id="@+id/btn_natural"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_home"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        android:text="@string/fonts_boca"
        android:textColor="#000"
        android:drawablePadding="0dp"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="326dp" />

    <Button
        android:id="@+id/btn_gos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_home"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        android:text="@string/fonts_boca"
        android:textColor="#000"
        android:drawablePadding="0dp"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="386dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="54dp" />

    <ImageButton
        android:id="@+id/btn_login_admin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#fff"
        android:src="@drawable/ic_security"
        android:contentDescription="@string/login_admin"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="326dp"
        tools:layout_editor_absoluteY="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>